package com.lft.adapter3.interfaceadapter;

/**
 * Function: 		ADD FUNCTION.
 * Reason:   		ADD REASON.
 * Date:            2020-09-10 13:36
 * <p>
 * Class Name:      AbsAdapter
 * Package Name:    com.lft.adapter3.interfaceadapter
 * @author Laifengting / E-mail:laifengting@foxmail.com
 * @version 1.0.0
 * @since JDK 8
 */
public abstract class AbsAdapter implements InterfaceAdapter {
	// 全部空实现接口方法
	@Override
	public void m1() {
	}
	
	@Override
	public void m2() {
	}
	
	@Override
	public void m3() {
	}
	
	@Override
	public void m4() {
	}
}
