package com.lft.nullobject;

public abstract class AbstractClass {
	protected String name;
	
	public abstract boolean isNil();
	
	public abstract String getName();
}
